# Python-CLI-Learning

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: graphs.py  importers.py  models.py
